admin/client/src/components/Breadcrumb/Breadcrumb.scss
.breadcrumb {
  font-size: $font-size-xs;
  line-height: 14px;
  margin-bottom: 0;
  float: left;
  width: 70%;
  max-height: $toolbar-height;
}

.breadcrumb>li.breadcrumb__item--last, // TODO Fix Bootstrap clash
.breadcrumb__item--last {
  display: block;
  float: none;
}

.cms h2.breadcrumb__item-title--last, // TODO Fix CMS clash
.breadcrumb__item-title--last {
  margin: 0;
  font-size: $font-size-lg;
  font-weight: normal;
  line-height: 24px;
  @include text-truncate;

  .icon {
    margin-left: 0.5rem;
    font-size: 1.5rem;
    cursor: pointer;
  }
}

// If only the title is shown
.breadcrumb__item:only-child {
  margin-top: 6px;
}

